Refactoring and fixing call inside class fields declaration